# qarina

./: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  deploy.sh  evidence.py  history.py  index.html  knowledge.py  main.py  pyproject.toml
tests/: test_evidence.py  test_video_dossiers.py
